fix for dark mode

--- a/core-library/tokens/button/_primary.scss
+++ b/core-library/tokens/button/_primary.scss
@@ -31,13 +31,15 @@ $default-color: null;
   @include button-const.selector() {
     &:where([category="#{$primary}"]),
     &:not([category]) {
-      &:where([color="critical"]) {
-        @include b-tokens.dark-colors(critical, neutral);
-        @include layout();
-      }
-      &:not([color]),
-      &:where([color="cta"]) {
-        @include layout();
+      &:where(:not(nav *)) {
+        &:where([color="critical"]) {
+          @include b-tokens.dark-colors(critical, neutral);
+          @include layout();
+        }
+        &:not([color]),
+        &:where([color="cta"]) {
+          @include layout();
+        }
       }
     }
   }
